Used PyCharm 'Reformat code' option used on entire repository

--- a/Task 1/analysis.ipynb
+++ b/Task 1/analysis.ipynb
@@ -4,10 +4,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import itertools\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
     "\n",
     "full_data = pd.read_csv(\"data.csv\", header=None)\n",
     "category = full_data[0]\n",
@@ -25,8 +26,8 @@
    "cell_type": "code",
    "source": [
     "{'Length [mm]', 'Diameter [mm]', 'Height [mm]',\n",
-    "          'Whole weight [g]', 'Shucked weight [g]',\n",
-    "          'Viscera weight [g]', 'Shell weight [g]', 'Rings'}"
+    " 'Whole weight [g]', 'Shucked weight [g]',\n",
+    " 'Viscera weight [g]', 'Shell weight [g]', 'Rings'}"
    ],
    "id": "d7cda0a2aa178266",
    "outputs": [],
@@ -66,7 +67,8 @@
    "source": [
     "data.columns = labels\n",
     "table_2 = data.describe().T\n",
-    "table_2 = table_2[['mean', 'std', 'min', '25%', '50%', '75%', 'max']].round(3)\n",
+    "table_2 = table_2[\n",
+    "    ['mean', 'std', 'min', '25%', '50%', '75%', 'max']].round(3)\n",
     "print(table_2)"
    ],
    "id": "5cb37ce969e7ebaf",
